First static analyzer

--- a/1/Makefile
+++ b/1/Makefile
@@ -9,7 +9,7 @@ parser: lexer parser.y lexer.c $(STRUCTS)
 	bison parser.y
 
 c: parser $(MAIN).c
-	gcc -o $(MAIN) $(FILES) $(MAIN).c
+	gcc -O0 -g -o $(MAIN) $(FILES) $(MAIN).c
 
 cpp: parser $(MAIN).cpp
 	g++ -Wno-write-strings -o $(MAIN) $(FILES) $(MAIN).cpp
