--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -23,6 +23,25 @@
                     "ignoreFailures": true
                 }
             ]
+        },
+        {
+            "name": "(gdb) RealSA",
+            "type": "cppdbg",
+            "request": "launch",
+            "program": "${workspaceFolder}/RealSA/spa",
+            "args": ["RealSA/tests/fib.rl"],
+            "stopAtEntry": false,
+            "cwd": "${workspaceFolder}",
+            "environment": [],
+            "externalConsole": true,
+            "MIMode": "gdb",
+            "setupCommands": [
+                {
+                    "description": "Enable pretty-printing for gdb",
+                    "text": "-enable-pretty-printing",
+                    "ignoreFailures": true
+                }
+            ]
         }
     ]
 }
