--- a/RealSA/Makefile
+++ b/RealSA/Makefile
@@ -1,6 +1,6 @@
 MAIN=spa
-STRUCTS=paren.c paren.h
-FILES=tmp/lexer.c paren.c tmp/parser.c
+STRUCTS=inc/linked_list.h inc/linked_list_node.h inc/reg_lang.h
+FILES=linked_list.c tmp/lexer.c reg_lang.c tmp/parser.c
 
 lexer: lexer.l $(STRUCTS)
 	lex lexer.l
